--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "start:dev": "expo start --dev-client",
+    "prebuild": "expo prebuild",
+    "prebuild:clean": "expo prebuild --clean"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^5.0.1",
+    "@react-native-community/slider": "5.0.1",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -24,7 +27,10 @@
     "expo": "~54.0.10",
     "expo-av": "^16.0.7",
     "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.9",
+    "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "~6.0.17",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -33,6 +39,7 @@
     "expo-linking": "~8.0.8",
     "expo-modules-core": "~3.0.21",
     "expo-router": "~6.0.8",
+    "expo-screen-orientation": "~9.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -50,7 +57,8 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
+    "react-native-worklets": "0.5.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
